# turboquant

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  THIRD_PARTY_NOTICES  audit.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  dependabot.yml  release.yml
benches/: compress.rs  gpu_score.rs  score.rs  store.rs
docs/: README.md  api-overview.md  benchmarks.md  release.md  roadmap.md  study.md
docs/decisions/: 001-gpu-scoring-architecture.md
docs/design/: README.md  algorithms.md  benchmarks.md  persistence.md  pipeline.md  store.md  testing.md
docs/design/algorithms/: 01-random-projection.md  02-qjl-quantization.md  03-score-computation.md  04-outlier-detection.md  05-value-quantization.md  06-fused-dequant-dot.md  07-lloyd-max-codebook.md  08-compressed-scoring.md  09-streaming-quantizer.md  11-gpu-scoring.md  README.md  data-structures.md  dependencies.md  quality.md
docs/study/: README.md  article.md
scripts/: bench.sh
src/: codebook.rs  error.rs  lib.rs  math.rs  outliers.rs  quantize.rs  quantizer.rs  score.rs  sketch.rs  values.rs
src/gpu/: mod.rs  score.wgsl  score_float_sign.wgsl  wgpu_backend.rs
src/store/: config.rs  key_store.rs  kv.rs  mod.rs  value_store.rs
tests/persistence/: main.rs
tests/quality/: helpers.rs  main.rs  test_compressed_ranking.rs  test_distortion.rs  test_outlier_benefit.rs  test_ranking.rs  test_rotation.rs  test_value_accuracy.rs
