[package]
name = "turboquant"
version = "0.1.0"
edition = "2021"
rust-version = "1.95"
description = "TurboQuant vector compression — sign-based hashing with near-optimal distortion rate"
authors = ["Jerome Guibert <jguibert@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/geronimo-iia/turboquant"
homepage = "https://github.com/geronimo-iia/turboquant"
documentation = "https://github.com/geronimo-iia/turboquant#readme"
readme = "README.md"
keywords = ["quantization", "vector", "compression", "attention", "search"]
categories = ["algorithms", "science", "compression"]
exclude = [".github/", "tests/", "docs/"]

[lib]
name = "turboquant"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.34"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
bytemuck = { version = "1.16", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "score"
harness = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "store"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
