[package]
name = "qjl-sketch"
version = "0.3.0"
edition = "2021"
rust-version = "1.95"
description = "QJL sign-based vector compression and scoring with near-optimal distortion rate"
authors = ["Jerome Guibert <jguibert@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/geronimo-iia/qjl-sketch"
homepage = "https://github.com/geronimo-iia/qjl-sketch"
documentation = "https://github.com/geronimo-iia/qjl-sketch#readme"
readme = "README.md"
keywords = ["quantization", "vector", "compression", "attention", "search"]
categories = ["algorithms", "science", "compression"]
exclude = [".github/", "tests/", "docs/"]

[lib]
name = "qjl_sketch"
path = "src/lib.rs"

[dependencies]
nalgebra = "0.34"
rand = "0.10"
rand_chacha = "0.10"
rand_distr = "0.6"
bytemuck = { version = "1.16", features = ["derive"] }
rayon = "1.10"
memmap2 = "0.9"
blake3 = "1.5"

[dev-dependencies]
tempfile = "3"
approx = "0.5"
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "score"
harness = false

[[bench]]
name = "compress"
harness = false

[[bench]]
name = "store"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
